@@ -1472,6 +1472,7 @@ Alex Volkov
 Martijn Vries
 Sjoerd de Vries
 Guido Vranken
+Daniel Wagner-Hall
 Niki W. Waibel
 Wojtek Walczak
 Charles Waldman
